# deliverance-connectors

./: README.md
allybot_connector/: CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  ally-fleet-robot-api.md  pyproject.toml
allybot_connector/.github/workflows/: allybot_workflows.yml
allybot_connector/.prd/: PRD.md
allybot_connector/allybot_connector/: __init__.py  allybot_connector.py
allybot_connector/allybot_connector/src/: __init__.py  commands.py  connector.py
allybot_connector/allybot_connector/src/api/: __init__.py  app_ws.py  client.py  models.py
allybot_connector/allybot_connector/src/config/: __init__.py  models.py
allybot_connector/cac/: actions.yaml  data_sources.yaml  footprint.yaml  mission_tracking.yaml  status_definition.yaml
allybot_connector/config/: .gitignore  example.env  fleet.example.yaml
allybot_connector/docker/: Dockerfile  build.sh  docker-compose.example.yaml
allybot_connector/tests/: conftest.py  test_api_client.py  test_config_models.py  test_connector.py
autoxing_connector/: CONTRIBUTING.md  Makefile  README.md  REUSE.toml  autoxing-cloud-api.md  pyproject.toml
autoxing_connector/.github/workflows/: autoxing_cloud_workflows.yml
autoxing_connector/.prd/: PRD.md
autoxing_connector/autoxing_cloud_connector/: __init__.py  autoxing_cloud_connector.py
autoxing_connector/autoxing_cloud_connector/src/: __init__.py  commands.py  connector.py
autoxing_connector/autoxing_cloud_connector/src/api/: client.py  data_poller.py  models.py
autoxing_connector/autoxing_cloud_connector/src/config/: __init__.py  models.py
autoxing_connector/cac/: actions.yaml  data_sources.yaml  footprint.yaml  mission_tracking.yaml  status_definition.yaml
autoxing_connector/config/: example.env  fleet.example.yaml
autoxing_connector/docker/: Dockerfile  build.sh  docker-compose.example.yaml
autoxing_connector/tests/: test_config_models.py
keenon_connector/: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  inorbit-connector.log.1  keenon-cloud-api.md  pyproject.toml
keenon_connector/.github/workflows/: keenon_workflows.yml
keenon_connector/.prd/: PRD.md
keenon_connector/cac/: actions.yaml  data_sources.yaml  mission_tracking.yaml  status_definition.yaml
keenon_connector/config/: example.env  fleet.example.yaml
keenon_connector/docker/: Dockerfile  build.sh  docker-compose.example.yaml
keenon_connector/keenon_connector/: __init__.py  keenon_connector.py
keenon_connector/keenon_connector/src/: __init__.py  commands.py  connector.py
keenon_connector/keenon_connector/src/api/: __init__.py  client.py  data_poller.py  models.py  webhook_receiver.py
keenon_connector/keenon_connector/src/config/: __init__.py  models.py
keenon_connector/scripts/: discover_fleet.py
keenon_connector/tests/: test_api_client.py  test_config_models.py  test_connector.py
