# SPDX-FileCopyrightText: 2026 Deliverance Enterprises
#
# SPDX-License-Identifier: MIT

[project]
name = "allybot-connector"
version = "0.1.0"
description = "InOrbit Edge connector for Allybot"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Deliverance Enterprises", email = "eduardo.munera@deliverance.enterprises" },
]
maintainers = [
    { name = "Deliverance Enterprises", email = "eduardo.munera@deliverance.enterprises" },
]
keywords = ["inorbit", "connector", "edge-connector", "robotics", "robops", "allybot"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "inorbit-connector[system-stats]~=2.2.0",
    "httpx~=0.28",
    "tenacity~=9.0",
    "aiohttp~=3.11",
]

[project.urls]
Homepage = "https://github.com/deliverance-enterprises/allybot-connector"
Documentation = "https://github.com/deliverance-enterprises/allybot-connector#readme"
Repository = "https://github.com/deliverance-enterprises/allybot-connector"
Issues = "https://github.com/deliverance-enterprises/allybot-connector/issues"

[project.optional-dependencies]
dev = [
    "coverage~=7.11",
    "pytest~=8.4",
    "pytest-asyncio~=1.2",
    "pytest-httpx~=0.35",
    "tox~=4.32",
    "tox-uv~=1.29",
    "colorlog~=6.10.1",
    "ruff>=0.14.7",
    "bump-my-version~=1.2.4",
]

[project.scripts]
allybot-connector = "allybot_connector.allybot_connector:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["allybot_connector"]

[tool.coverage.run]
source = ["allybot_connector/"]

[tool.coverage.report]
fail_under = 0

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
env_list = ["py313"]

[tool.tox.gh]
python = { "3.13" = "py313" }

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    [
        "ruff",
        "check",
    ],
    [
        "coverage",
        "run",
        "-m",
        "pytest",
    ],
    [
        "coverage",
        "html",
        "-d",
        "{envlogdir}/coverage",
    ],
]
